# lazybsd

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  SConscript  SConstruct  build.py  build.sh  build_debug.sh  build_release.sh  conanfile.txt  config.h  config.xml  helper.py  main.cc  start.py  xhelper.py
.github/workflows/: auto-merge.yml  build.yml  codeql.yml
bsd/: CMakeLists.txt
bsd/include/: bus_if.h  cryptodev_if.h  device_if.h  lazybsd_bsd.h  linker_if.h  vnode_if.h  vnode_if_newproto.h  vnode_if_typedef.h
bsd/include/sys/: _mutex.h  _rwlock.h  condvar.h  filedesc.h  mutex.h  param.h  pcpu.h  rwlock.h  sx.h  systm.h  turnstile.h  vnode.h
bsd/include/vm/: uma_int.h
bsd/lib/: lazybsd_compat.c  lazybsd_crypto.c  lazybsd_freebsd.c  lazybsd_kern_environment.c  lazybsd_kern_subr.c  lazybsd_kern_synch.c  lazybsd_kern_timeout.c  lazybsd_kevent.c  lazybsd_kevent.h  lazybsd_lock.c  lazybsd_lock.h  lazybsd_patch.c  lazybsd_patch.h  lazybsd_route.c  lazybsd_socket.c  lazybsd_socket.h  lazybsd_subr_epoch.c  lazybsd_veth.c  lazybsd_veth.h
bsd/src/sys/sys/: kpilite.h
bsd/sys/netinet/libalias/: alias_sctp.h
bsd/sys/sys/: systm.h
bypass/: file.cc  file.h  pcap.cc
cmake/: BuildDPDK.cmake  CheckCompiler.cmake  MakeConfig.cmake  MakeVersion.cmake  ThirdParty.cmake  utilities.cmake
doc/: 快速开始.md  移植说明.md
docs/: index.md  移植说明.md
impl/: pcap.cc
inc/: bsd.h  bypass.h  config.h.in  impl.h
include/: config.h.in  helper.h  lazybsd.h  version.h.in  wrapper.h
lib/: CMakeLists.txt
lib/python/: CMakeLists.txt  setup.py
lua/: init.lua
python/: setup.py.i  test.py
python/src/: main.cpp
scons/: builder.py  compiler.py
script/: freebsd_generate.sh  freebsd_port.sh
src/: CMakeLists.txt  lazybsd_api.c  lazybsd_api.cc  lazybsd_api.h  lazybsd_api.hh  lazybsd_args.cc  lazybsd_args.h  lazybsd_backtrace.c  lazybsd_bsd.cc  lazybsd_bsd.h  lazybsd_bsd.hh  lazybsd_cfg.cc  lazybsd_cfg.h  lazybsd_cfg.hh  lazybsd_cmdline.cc  lazybsd_cmdline.h  lazybsd_cmdline.hh  lazybsd_dpdk.cc  lazybsd_dpdk.h  lazybsd_dpdk.hh  lazybsd_epoll.cc  lazybsd_epoll.h  lazybsd_epoll.hh  lazybsd_errno.c  lazybsd_errno.cc  lazybsd_errno.h  lazybsd_errno.hh  lazybsd_event.h  lazybsd_global.cc  lazybsd_global.h  lazybsd_global.hh  lazybsd_host.c  lazybsd_host.cc  lazybsd_host.h  lazybsd_host.hh  lazybsd_init.cc  lazybsd_init.h  lazybsd_init.hh  lazybsd_lock.cc  lazybsd_lock.h  (+24 more)
src/bypass/: bypass_dpdk.cc  bypass_dpdk.h  bypass_file.cc  bypass_file.h  bypass_pfring.cc  bypass_pfring.h  bypass_sock.cc  bypass_sock.h  bypass_socket.cc  bypass_socket.h
src/lazybsd/: lazybsd_version.cc
src/wrapper/: wrapper_connect.cc
test/: CMakeLists.txt  init.cc  testBypassSock.cc  testInit.cc  test_args.cc  test_cfg.cc  test_cmdline.cc  test_demo.cc  test_dpdk.cc  test_init.cc  test_log.cc  test_main.cc  test_memory.cc  test_pfring.cc  test_socket.cc
tool/: CMakeLists.txt  install_dependence.sh
